# M2-SE-Cloud

./: README.md
backend/: Dockerfile  app.py  deployment.yaml  ingress.yaml  pyproject.toml
frontend/: Dockerfile  deployment.yaml  index.html  service.yaml
